# phrase_generator

./: LICENSE  README.md  pyproject.toml
phrase_generator/: __init__.py  phrase_generator.py  words.py
